using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Unity1Week_MainGameSystem_v4{
    public enum E_SceneName {
        Sample
    }
}
